bugFix: scrollbar in native+small screen web fix for segmented chip

--- a/src/app/examples/segmented-chip-control-example/segmented-chip-control-example.component.tns.scss
+++ b/src/app/examples/segmented-chip-control-example/segmented-chip-control-example.component.tns.scss
@@ -2,7 +2,6 @@
 
 .segment-example{
   padding-top:20;
-  background: get-color('medium');
   .segment-data {
       height: 300;
       margin-top: 20;
